--- a/Restuarant_POS/Restuarant_POS.csproj
+++ b/Restuarant_POS/Restuarant_POS.csproj
@@ -81,6 +81,12 @@
     <Compile Include="Food\AddNewFood.Designer.cs">
       <DependentUpon>AddNewFood.cs</DependentUpon>
     </Compile>
+    <Compile Include="Food\UpdateForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Food\UpdateForm.Designer.cs">
+      <DependentUpon>UpdateForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Item\OrderForm.cs">
       <SubType>Form</SubType>
     </Compile>
